--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ layout: landing-page
 						is my passion.
 					</h2>
 
-					<p>An experienced and protean IT professional with 4+ years of industry experience in database <br />(Oracle and MySQL) and UNIX administration skills along with programming<br /> skills over Shell scripting, Python, R, Pl/SQL, Java, PHP. Good hands on RDBMS upgardes, Patching,<br /> HA configuration (RAC, Dataguard, Extended-RAC), <br />Backup/Recovery solutions, Performance Tuning, ASO (Advance Security). A committed team player, precise,<br /> self-motivated, quantitative and good interpersonal skills. Research oriented and explorer.
-					<br />
-					In addition i am a machine learning enthusiastic, with practicing machine learning problem' in kaggle.
+<p>An experienced and protean IT professional with 4+ years of industry experience in database (Oracle and MySQL) and UNIX administration skills along with programming skills over Shell scripting, Python, R, Pl/SQL, Java, PHP. Good hands on RDBMS upgardes, Patching, HA configuration (RAC, Dataguard, Extended-RAC), Backup/Recovery solutions, Performance Tuning, ASO (Advance Security). A committed team player, precise, self-motivated, quantitative and good interpersonal skills. Research oriented and explorer.
+					
+					In addition I am a machine learning enthusiastic, with practicing machine learning problem's in kaggle.
 					</p>
 <br />
-Specialties: Database Administration and programming, Shell Scripting, Committed team player, Protean IT professional.
+<Strong>Specialties:</Strong> Database Administration and programming, Shell Scripting, Machine Learning, Deep Learning, Committed team player, Protean IT professional.
 
 
 				</header>
